<resources>
    <string name="app_name">MijnVitaliteit</string>
    <string name="api_error">Er is iets fout gegaan</string>
    <string name="api_error_post">Kan post niet laden</string>
    <string name="api_error_comments">Reacties kunnen niet geladen worden</string>
    <string name="api_error_image">Kan afbeelding niet uploaden</string>
    <string name="content_desc_vitality_logo">Vitaliteits Logo</string>
    <string name="content_desc_inholland_logo">InHolland Logo</string>
    <string name="cancel_text">Annuleren</string>
    <string name="activity_type_exercise">Bewegen</string>
    <string name="activity_type_diet">Voeding</string>
    <string name="activity_type_mind">Ontspanning</string>
    <string name="message_good_morning">Goedemorgen</string>
    <string name="message_good_afternoon">Goedemiddag</string>
    <string name="message_good_evening">Goedenavond</string>
    <string name="message_good_night">Goedenacht</string>
    <string name="message_welcome">Welkom</string>
    <string name="time_future">in de toekomst</string>
    <string name="time_minute_ago">een minuut geleden</string>
    <string name="time_minutes_ago">%01d minuten geleden</string>
    <string name="time_hours_ago">%01d uur geleden</string>
    <string name="time_yesterday">gisteren</string>
    <string name="time_yesterday_with_time">gisteren om %1$s</string>
    <string name="time_date_at">%1$s om %2$s</string>
    <string name="tutorial_skip">Overslaan</string>
    <string name="tutorial_continue">Ga verder</string>
    <string name="tutorial_first_title">Welkom bij het vitaliteitsprogramma, voor medewerkers van Inholland!</string>
    <string name="tutorial_first_description">Samen vechten we voor vitaliteit, doe jij met ons mee? Alleen zo wordt jij de beste versie van jezelf!</string>
    <string name="tutorial_description_mind">Heb jij al een manier gevonden om je hoofd leeg te maken? Rust brengt namelijk een hoop voordelen met zich mee!</string>
    <string name="tutorial_description_diet">Wordt bewuster van je voeding doormiddel van voedingsgerichte activiteiten.</string>
    <string name="tutorial_description_exercise">Niets is belangrijker dan af en toe de benen strekken tijdens lange werkdagen, doe jij dit al genoeg?</string>
    <string name="tutorial_description_community">Kies jouw community en neem samen met jouw collega’s deel aan de leukste activiteiten!</string>
    <string name="tutorial_description_timeline">Deel jouw prestaties met collega’s op de tijdlijn of daag elkaar uit om samen te trainen voor komende activiteiten.</string>
    <string name="tutorial_description_achievements">Verdien medailles bij het afronden van een aantal activiteiten of bij elke 300 punten die je verdiend</string>
    <string name="tutorial_last_title">Ben jij net zo enthousiast als wij?</string>
    <string name="tutorial_last_subtitle">Log nu in en krijg toegang tot de onderstaande voordelen!</string>
    <string name="tutorial_advantage_1">Krijg toegang tot leuke activiteiten</string>
    <string name="tutorial_advantage_2">Houd de voortgang van jouw activiteiten bij</string>
    <string name="tutorial_advantage_3">Deel jouw voortgang op jouw profiel</string>
    <string name="tutorial_advantage_4">Kom in contact met jouw collega\'s</string>
    <string name="tutorial_advantage_5">Zie welke activiteiten jouw collega’s doen</string>
    <string name="tutorial_button_signup">Log nu in</string>
    <string name="login_subtitle">Log in met je Inholland account om verder te gaan</string>
    <string name="login_hint_email">a.voorbeeld@inholland.nl</string>
    <string name="login_hint_password">Wachtwoord</string>
    <string name="login_button_text">Inloggen</string>
    <string name="login_register_info_1">Nog geen account?</string>
    <string name="login_register_info_2"><u>Meld je aan</u></string>
    <string name="login_error_empty_fields">Vul alle velden in</string>
    <string name="login_error_invalid_email">Vul een geldig email adres in</string>
    <string name="login_error_invalid_combination">Combinatie email en wachtwoord onjuist</string>
    <string name="login_forgot_password">Wachtwoord vergeten?</string>
    <string name="recovery_title">Wachtwoord vergeten?</string>
    <string name="recovery_subtitle">Geen zorgen, het komt goed!</string>
    <string name="recovery_content">Vul het e-mail adres in waarmee je normaal zou inloggen en we helpen je het probleem op te lossen!</string>
    <string name="recovery_button">RESET WACHTWOORD</string>
    <string name="recovery_go_back">Ik wil mijn wachtwoord niet wijzigen</string>
    <string name="recovery_error">Er is een fout opgetreden</string>
    <string name="recovery_try_again">Probeer opnieuw</string>
    <string name="recovery_confirm_title">Controleer je e-mail</string>
    <string name="recovery_confirm_description">Als het opgegeven e-mail adres bij ons bekend is hebben we je een mail gestuurd om je wachtwoord opnieuw in te stellen. Dit kan een paar minuten duren!</string>
    <string name="recovery_confirm_button">Begrepen</string>
    <string name="dialog_loading_general">Even geduld...</string>
    <string name="dialog_email_title">Verifieer je email</string>
    <string name="dialog_email_body">We hebben je een verificatie mail gestuurd naar het opgegeven email adres. Nadat je deze geverifieerd hebt kan je inloggen!</string>
    <string name="dialog_email_button_text">Begrepen</string>
    <string name="register_subtitle">meld je nu aan!</string>
    <string name="register_title">Laten we beginnen,</string>
    <string name="register_hint_email">a.voorbeeld@inholland.nl</string>
    <string name="register_hint_password">Wachtwoord</string>
    <string name="register_hint_confirm_password">Bevestig wachtwoord</string>
    <string name="register_login_info_1">Heb je al een account?</string>
    <string name="register_login_info_2"><u>Log in</u></string>
    <string name="register_button_text">Registreer</string>
    <string name="register_error_invalid_email">Vul een geldig email adres in</string>
    <string name="register_error_password_no_match">De wachtwoorden komen niet overeen</string>
    <string name="register_error_password_length">Het wachtwoord moet minimaal %01d karakters bevatten</string>
    <string name="register_error_email_in_use">Het opgegeven email is al in gebruik</string>
    <string name="register_details_title_1">De laatste stapjes,</string>
    <string name="register_details_subtitle_1">op naar vitaliteit!</string>
    <string name="hint_firstname">Voornaam</string>
    <string name="hint_lastname">Achternaam</string>
    <string name="hint_department">Afdeling</string>
    <string name="hint_jobtitle">Functietitel</string>
    <string name="hint_location">Locatie</string>
    <string name="register_details_1_button_text">Ga verder</string>
    <string name="register_details_error">Vul alle velden in</string>
    <string name="register_details_title_2">We zijn er bijna,</string>
    <string name="register_details_subtitle_2">vertel meer over jezelf!</string>
    <string name="register_details_photo_info">Een foto maakt jouw profiel net iets persoonlijker. (optioneel)</string>
    <string name="hint_profile_description">Wat betekend vitaliteit voor jou? (Minimaal %01d karakters)</string>
    <string name="register_details_2_button_text">Start nu!</string>
    <string name="home_header_scoreboard_text">Bekijk scorebord</string>
    <string name="content_desc_current_chl_icon">Current Activities Icon</string>
    <string name="home_points_text">%1$s punten</string>
    <string name="home_my_activities_text">Mijn activiteiten</string>
    <string name="challenge_view_item_button_text">Bekijk voortgang</string>
    <string name="challenge_view_item_button_text_exp">Bekijk activiteit</string>
    <string name="activities_overview_user_activities_text">Mijn Activiteiten</string>
    <string name="activities_overview_available_activities_text">Beschikbare Activiteiten</string>
    <string name="activities_overview_upcoming_activities_text">Komende Activiteiten</string>
    <string name="activities_overview_no_user_activities">Je neemt nog geen deel aan een activiteit</string>
    <string name="activities_overview_no_available_activities">Er zijn geen actieve activiteiten beschikbaar</string>
    <string name="activities_overview_no_upcoming_activities">Er zijn op dit moment geen activiteiten gepland</string>
    <string name="activity_button_start_text">Meld je aan</string>
    <string name="activity_button_complete_text">Voltooi activiteit</string>
    <string name="activity_button_cancel_text">Stop activiteit</string>
    <string name="activity_points_message_1">Verdien</string>
    <string name="activity_points_message_2">punten met deze activiteit</string>
    <string name="activity_start_date_text">Start %1$s</string>
    <string name="activity_end_date_text">Eindigt %1$s</string>
    <string name="activity_ended_text">Geëindigd op %1$s</string>
    <string name="activity_participating_text">%01d collega(\'s) doen al mee</string>
    <string name="activity_starting_soon">Start binnenkort</string>
    <string name="activity_recommended_activity_text">Voorgestelde activiteiten</string>
    <string name="activity_open_url_button">Open Link</string>
    <string name="activity_location_text"><![CDATA[<b>Locatie:</b>]]> %1$s</string>
    <string name="dialog_activity_title">Stop de activiteit</string>
    <string name="dialog_activity_body">Je staat op het punt om te stoppen met deze activiteit, weet je dat zeker?</string>
    <string name="dialog_activity_button_confirm_text">Ik weet het zeker</string>
    <string name="dialog_activity_button_cancel_text">Ga terug</string>
    <string name="dialog_activity_calendar_title">Toevoegen aan je kalender</string>
    <string name="dialog_activity_calendar_body">Wil je deze activiteit toevoegen aan jouw kalender?</string>
    <string name="dialog_activity_calendar_button_confirm">Toevoegen</string>
    <string name="dialog_activity_calendar_button_cancel">Annuleren</string>
    <string name="activity_share_message">Neem samen met mij deel aan de activiteit \'%1$s\'</string>
    <string name="navigation_home" translatable="false">Home</string>
    <string name="navigation_timeline">Tijdlijn</string>
    <string name="navigation_post">Bericht</string>
    <string name="navigation_notifications">Notificaties</string>
    <string name="navigation_profile">Profiel</string>
    <string name="navigation_scoreboard">Scorebord</string>
    <string name="navigation_activity">Activiteit</string>
    <string name="navigation_logout">Uitloggen</string>
    <string name="navigation_activity_share">Deel activiteit</string>
    <string name="navigation_activity_calendar">Sla activitiet op</string>
    <string name="navigation_settings">Instellingen</string>
    <string name="post_text_comments">reactie(s)</string>
    <string name="timeline_hint_search">Wie wil je zoeken?</string>
    <string name="timeline_empty">Geen berichten</string>
    <string name="post_button_comment">Reageer</string>
    <string name="post_button_like">Vind ik leuk</string>
    <string name="post_like_count">Jij en %1$s anderen</string>
    <string name="post_like_count_you">Jij</string>
    <string name="create_post_button">Plaats</string>
    <string name="create_post_image_button_text">Voeg afbeelding toe</string>
    <string name="create_post_hint">Wat wil je met je collega\'s delen?</string>
    <string name="comments_empty">Nog geen reacties</string>
    <string name="profile_edit_profile_image_title">Profielfoto</string>
    <string name="profile_edit_personal_details_title">Persoonlijke informatie</string>
    <string name="profile_edit_description_title">Biografie</string>
    <string name="profile_edit_modify">Aanpassen</string>
    <string name="profile_edit_save">Opslaan</string>
    <string name="profile_edit_delete">Verwijder account</string>
</resources>