<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_timeline"
        android:title="@string/navigation_timeline" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_post"
        android:title="@string/navigation_post" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/navigation_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/navigation_profile" />

</menu>