<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.register.main.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/vitality_logo"
                android:contentDescription="@string/content_desc_vitality_logo"
                android:layout_marginBottom="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/content_cardview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp"
            android:background="@color/white"
            app:contentPadding="20dp"
            app:layout_constraintTop_toBottomOf="@id/header_container"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_details_1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_details_title_2"
                    android:fontFamily="@font/avenir_lt_pro_heavy"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_marginTop="-4sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_details_subtitle_2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/avenir_lt_pro_roman"
                    android:layout_marginBottom="@dimen/margin_normal"
                    />

                <TextView
                    android:id="@+id/register_details_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/avenir_lt_pro_light"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:visibility="invisible"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/margin_normal">
                    <ImageButton
                        android:id="@+id/register_details_pick_image_button"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/circle"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:src="@drawable/ic_photo_camera">
                    </ImageButton>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_details_photo_info"
                        android:textColor="@color/black"
                        android:fontFamily="@font/avenir_lt_pro_roman"
                        android:textSize="16sp"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/register_details_edit_text_description"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="@dimen/margin_medium_big"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLength="130"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/register_details_2_button"
                    style="@style/ButtonPrimary"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@drawable/button_primary"
                    android:enabled="false"
                    android:text="@string/register_details_1_button_text"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_pro_heavy"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_bottom"
            app:layout_constraintGuide_end="12.5dp"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_left"
            app:layout_constraintGuide_begin="12.5dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="12.5dp"
            android:orientation="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>